// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PullRequestsQuery #buildQuery first private query - no query state 1`] = `
Object {
  "query": "
      query (
        $issueQuery: String!, 
        $maxSearchLimit: Int!,
        $maxLimit: Int!,
        $pullRequestsCursor: String
      ) {
        search(first: $maxSearchLimit, after: $pullRequestsCursor, type: ISSUE, query: $issueQuery) {
          issueCount
          edges {
            node {
              ...on PullRequest {
    additions
    author {
      ...on User {
    name
    login
  }
    }
    authorAssociation
    baseRefName
    baseRefOid
    baseRepository {
      name
      url
      owner {
        ...on RepositoryOwner {
    login
    id
    url
  }
      }
    }
    body
    changedFiles
    checksUrl
    closed
    closedAt
    # comments  # Maybe someday
    createdAt
    databaseId
    deletions
    editor {
      ...on User {
    login
    name
    isSiteAdmin
    company
    createdAt
    databaseId
    email
    isEmployee
    location
    updatedAt
    url
    websiteUrl
  }
    }
    # files # Maybe someday
    headRefName
    headRefOid
    headRepository {
      name
      owner {
        ...on RepositoryOwner {
    login
    id
    url
  }
      }
    }
    id
    isDraft
    lastEditedAt
    locked
    
    mergeable
    merged
    mergedAt
    mergedBy {
      ...on User {
    name
    login
  }
    }
    number
    permalink
    publishedAt
    reviewDecision
    # reviewRequests  # Maybe someday
    state
    # suggestedReviewers  # Maybe someday
    title
    updatedAt
    url
  }
              
              
    ... on PullRequest {
      reviews(first: $maxLimit) {
        totalCount
        nodes {
          ...on PullRequestReview {
    id
    author {
      ...on User {
          name
          login
        }
    }
    state
    submittedAt
    updatedAt
    url
  }
        }
        pageInfo {
          endCursor
          hasNextPage
        }
      }
    }
              
  ... on PullRequest {
    labels(first: $maxLimit) {
      totalCount
      nodes {
        id
        name
      }
      pageInfo {
        endCursor
        hasNextPage
      }
    }
  } 
            }
          }
          pageInfo {
            endCursor
            hasNextPage
          }
        }
        ...on Query {
    rateLimit {
      limit
      cost
      remaining
      resetAt
    }
  }
      }",
  "queryVariables": Object {
    "issueQuery": "is:pr repo:J1-Test/musical-palm-tree updated:>=2011-10-05T14:48:00.000Z",
    "maxLimit": 100,
    "maxSearchLimit": 25,
  },
}
`;

exports[`PullRequestsQuery #buildQuery first query - no query state 1`] = `
Object {
  "query": "
      query (
        $issueQuery: String!, 
        $maxSearchLimit: Int!,
        $maxLimit: Int!,
        $pullRequestsCursor: String
      ) {
        search(first: $maxSearchLimit, after: $pullRequestsCursor, type: ISSUE, query: $issueQuery) {
          issueCount
          edges {
            node {
              ...on PullRequest {
    additions
    author {
      ...on User {
    name
    login
  }
    }
    authorAssociation
    baseRefName
    baseRefOid
    baseRepository {
      name
      url
      owner {
        ...on RepositoryOwner {
    login
    id
    url
  }
      }
    }
    body
    changedFiles
    checksUrl
    closed
    closedAt
    # comments  # Maybe someday
    createdAt
    databaseId
    deletions
    editor {
      ...on User {
    login
    name
    isSiteAdmin
    company
    createdAt
    databaseId
    email
    isEmployee
    location
    updatedAt
    url
    websiteUrl
  }
    }
    # files # Maybe someday
    headRefName
    headRefOid
    headRepository {
      name
      owner {
        ...on RepositoryOwner {
    login
    id
    url
  }
      }
    }
    id
    isDraft
    lastEditedAt
    locked
    mergeCommit {
      ...on Commit {
    id
    oid
    message
    authoredDate
    changedFiles
    commitUrl
    author {
      date
      user {
        login # this used to be ...userFields
      }
    }
  }
    }
    mergeable
    merged
    mergedAt
    mergedBy {
      ...on User {
    name
    login
  }
    }
    number
    permalink
    publishedAt
    reviewDecision
    # reviewRequests  # Maybe someday
    state
    # suggestedReviewers  # Maybe someday
    title
    updatedAt
    url
  }
              
    ... on PullRequest {
      commits(first: $maxLimit) {
        totalCount
        nodes {
          commit {
            ...on Commit {
    id
    oid
    message
    authoredDate
    changedFiles
    commitUrl
    author {
      date
      user {
        login # this used to be ...userFields
      }
    }
  }
          }
        }
        pageInfo {
          endCursor
          hasNextPage
        }
      }
    }
              
    ... on PullRequest {
      reviews(first: $maxLimit) {
        totalCount
        nodes {
          ...on PullRequestReview {
    id
    commit {
      oid
    }
    author {
      ...on User {
          name
          login
        }
    }
    state
    submittedAt
    updatedAt
    url
  }
        }
        pageInfo {
          endCursor
          hasNextPage
        }
      }
    }
              
  ... on PullRequest {
    labels(first: $maxLimit) {
      totalCount
      nodes {
        id
        name
      }
      pageInfo {
        endCursor
        hasNextPage
      }
    }
  } 
            }
          }
          pageInfo {
            endCursor
            hasNextPage
          }
        }
        ...on Query {
    rateLimit {
      limit
      cost
      remaining
      resetAt
    }
  }
      }",
  "queryVariables": Object {
    "issueQuery": "is:pr repo:J1-Test/musical-palm-tree updated:>=2011-10-05T14:48:00.000Z",
    "maxLimit": 100,
    "maxSearchLimit": 25,
  },
}
`;

exports[`PullRequestsQuery #buildQuery query with query state 1`] = `
Object {
  "query": "
      query (
        $issueQuery: String!, 
        $maxSearchLimit: Int!,
        $maxLimit: Int!,
        $pullRequestsCursor: String
      ) {
        search(first: $maxSearchLimit, after: $pullRequestsCursor, type: ISSUE, query: $issueQuery) {
          issueCount
          edges {
            node {
              ...on PullRequest {
    additions
    author {
      ...on User {
    name
    login
  }
    }
    authorAssociation
    baseRefName
    baseRefOid
    baseRepository {
      name
      url
      owner {
        ...on RepositoryOwner {
    login
    id
    url
  }
      }
    }
    body
    changedFiles
    checksUrl
    closed
    closedAt
    # comments  # Maybe someday
    createdAt
    databaseId
    deletions
    editor {
      ...on User {
    login
    name
    isSiteAdmin
    company
    createdAt
    databaseId
    email
    isEmployee
    location
    updatedAt
    url
    websiteUrl
  }
    }
    # files # Maybe someday
    headRefName
    headRefOid
    headRepository {
      name
      owner {
        ...on RepositoryOwner {
    login
    id
    url
  }
      }
    }
    id
    isDraft
    lastEditedAt
    locked
    mergeCommit {
      ...on Commit {
    id
    oid
    message
    authoredDate
    changedFiles
    commitUrl
    author {
      date
      user {
        login # this used to be ...userFields
      }
    }
  }
    }
    mergeable
    merged
    mergedAt
    mergedBy {
      ...on User {
    name
    login
  }
    }
    number
    permalink
    publishedAt
    reviewDecision
    # reviewRequests  # Maybe someday
    state
    # suggestedReviewers  # Maybe someday
    title
    updatedAt
    url
  }
              
    ... on PullRequest {
      commits(first: $maxLimit) {
        totalCount
        nodes {
          commit {
            ...on Commit {
    id
    oid
    message
    authoredDate
    changedFiles
    commitUrl
    author {
      date
      user {
        login # this used to be ...userFields
      }
    }
  }
          }
        }
        pageInfo {
          endCursor
          hasNextPage
        }
      }
    }
              
    ... on PullRequest {
      reviews(first: $maxLimit) {
        totalCount
        nodes {
          ...on PullRequestReview {
    id
    commit {
      oid
    }
    author {
      ...on User {
          name
          login
        }
    }
    state
    submittedAt
    updatedAt
    url
  }
        }
        pageInfo {
          endCursor
          hasNextPage
        }
      }
    }
              
  ... on PullRequest {
    labels(first: $maxLimit) {
      totalCount
      nodes {
        id
        name
      }
      pageInfo {
        endCursor
        hasNextPage
      }
    }
  } 
            }
          }
          pageInfo {
            endCursor
            hasNextPage
          }
        }
        ...on Query {
    rateLimit {
      limit
      cost
      remaining
      resetAt
    }
  }
      }",
  "queryVariables": Object {
    "issueQuery": "is:pr repo:J1-Test/musical-palm-tree updated:>=2011-10-05T14:48:00.000Z",
    "maxLimit": 100,
    "maxSearchLimit": 25,
    "pullRequestsCursor": "endCursor",
  },
}
`;

exports[`PullRequestsQuery #iteratePullRequests Pulling data out with inner resource pagination 1`] = `
Object {
  "commits": Array [
    Object {
      "id": "commit1",
    },
  ],
  "id": "MDExOlB1bGxSZXF1ZXN0MTA=",
  "labels": Array [
    Object {
      "id": "label1=",
      "name": "bug",
    },
    Object {
      "id": "label2=",
      "name": "documentation",
    },
    Object {
      "id": "label3=",
      "name": "first-task",
    },
    Object {
      "id": "label4=",
      "name": "feature",
    },
  ],
  "reviews": Array [
    Object {
      "id": "review1",
    },
    Object {
      "id": "review2",
    },
    Object {
      "id": "review3==",
    },
  ],
  "title": "Update CHANGELOG.md",
}
`;

exports[`PullRequestsQuery #iteratePullRequests Pulling data out with inner resource pagination 2`] = `
Object {
  "query": "
      query (
        $issueQuery: String!, 
        $maxSearchLimit: Int!,
        $maxLimit: Int!,
        $pullRequestsCursor: String
      ) {
        search(first: $maxSearchLimit, after: $pullRequestsCursor, type: ISSUE, query: $issueQuery) {
          issueCount
          edges {
            node {
              ...on PullRequest {
    additions
    author {
      ...on User {
    name
    login
  }
    }
    authorAssociation
    baseRefName
    baseRefOid
    baseRepository {
      name
      url
      owner {
        ...on RepositoryOwner {
    login
    id
    url
  }
      }
    }
    body
    changedFiles
    checksUrl
    closed
    closedAt
    # comments  # Maybe someday
    createdAt
    databaseId
    deletions
    editor {
      ...on User {
    login
    name
    isSiteAdmin
    company
    createdAt
    databaseId
    email
    isEmployee
    location
    updatedAt
    url
    websiteUrl
  }
    }
    # files # Maybe someday
    headRefName
    headRefOid
    headRepository {
      name
      owner {
        ...on RepositoryOwner {
    login
    id
    url
  }
      }
    }
    id
    isDraft
    lastEditedAt
    locked
    mergeCommit {
      ...on Commit {
    id
    oid
    message
    authoredDate
    changedFiles
    commitUrl
    author {
      date
      user {
        login # this used to be ...userFields
      }
    }
  }
    }
    mergeable
    merged
    mergedAt
    mergedBy {
      ...on User {
    name
    login
  }
    }
    number
    permalink
    publishedAt
    reviewDecision
    # reviewRequests  # Maybe someday
    state
    # suggestedReviewers  # Maybe someday
    title
    updatedAt
    url
  }
              
    ... on PullRequest {
      commits(first: $maxLimit) {
        totalCount
        nodes {
          commit {
            ...on Commit {
    id
    oid
    message
    authoredDate
    changedFiles
    commitUrl
    author {
      date
      user {
        login # this used to be ...userFields
      }
    }
  }
          }
        }
        pageInfo {
          endCursor
          hasNextPage
        }
      }
    }
              
    ... on PullRequest {
      reviews(first: $maxLimit) {
        totalCount
        nodes {
          ...on PullRequestReview {
    id
    commit {
      oid
    }
    author {
      ...on User {
          name
          login
        }
    }
    state
    submittedAt
    updatedAt
    url
  }
        }
        pageInfo {
          endCursor
          hasNextPage
        }
      }
    }
              
  ... on PullRequest {
    labels(first: $maxLimit) {
      totalCount
      nodes {
        id
        name
      }
      pageInfo {
        endCursor
        hasNextPage
      }
    }
  } 
            }
          }
          pageInfo {
            endCursor
            hasNextPage
          }
        }
        ...on Query {
    rateLimit {
      limit
      cost
      remaining
      resetAt
    }
  }
      }",
  "queryVariables": Object {
    "issueQuery": "is:pr repo:J1-Test/happy-sunshine updated:>=2011-10-05T14:48:00.000Z",
    "maxLimit": 100,
    "maxSearchLimit": 25,
  },
}
`;

exports[`PullRequestsQuery #iteratePullRequests Pulling data out with inner resource pagination 3`] = `
Object {
  "query": "
      query (
        $pullRequestNumber: Int!
        $repoName: String!
        $repoOwner: String!
        $maxLimit: Int!
        $commitsCursor: String
        $reviewsCursor: String
        $labelsCursor: String
      ) {
          repository(name: $repoName, owner: $repoOwner) {
            pullRequest(number: $pullRequestNumber) {
              ...
  on PullRequest {
    additions
    author {
      ...on User {
    name
    login
  }
    }
    authorAssociation
    baseRefName
    baseRefOid
    baseRepository {
      name
      url
      owner {
        ...on RepositoryOwner {
    login
    id
    url
  }
      }
    }
    body
    changedFiles
    checksUrl
    closed
    closedAt
    # comments  # Maybe someday
    createdAt
    databaseId
    deletions
    editor {
      ...on User {
    login
    name
    isSiteAdmin
    company
    createdAt
    databaseId
    email
    isEmployee
    location
    updatedAt
    url
    websiteUrl
  }
    }
    # files # Maybe someday
    headRefName
    headRefOid
    headRepository {
      name
      owner {
        ...on RepositoryOwner {
    login
    id
    url
  }
      }
    }
    id
    isDraft
    lastEditedAt
    locked
    mergeCommit {
      ...on Commit {
    id
    oid
    message
    authoredDate
    changedFiles
    commitUrl
    author {
      date
      user {
        login # this used to be ...userFields
      }
    }
  }
    }
    mergeable
    merged
    mergedAt
    mergedBy {
      ...on User {
    name
    login
  }
    }
    number
    permalink
    publishedAt
    reviewDecision
    # reviewRequests  # Maybe someday
    state
    # suggestedReviewers  # Maybe someday
    title
    updatedAt
    url
  }
              
    commits(first: $maxLimit, after: $commitsCursor) {
      totalCount
      nodes {
        commit {
          ...on Commit {
    id
    oid
    message
    authoredDate
    changedFiles
    commitUrl
    author {
      date
      user {
        login # this used to be ...userFields
      }
    }
  }
        }
      }
      
      pageInfo {
        endCursor
        hasNextPage
      }
    }
              
    reviews(first: $maxLimit, after: $reviewsCursor) {
      totalCount
      nodes {
        ...on PullRequestReview {
    id
    commit {
      oid
    }
    author {
      ...on User {
          name
          login
        }
    }
    state
    submittedAt
    updatedAt
    url
  }
      }
      pageInfo {
        endCursor
        hasNextPage
      }
    }
              
    labels(first: $maxLimit, after: $labelsCursor) {
      totalCount
      nodes {
        id
        name
      }
      pageInfo {
        endCursor
        hasNextPage
      }
    } 
            }
          }
          ...on Query {
    rateLimit {
      limit
      cost
      remaining
      resetAt
    }
  }
      }",
  "queryVariables": Object {
    "maxLimit": 100,
    "pullRequestNumber": undefined,
    "repoName": "musical-palm-tree",
    "repoOwner": "J1-Test",
  },
}
`;

exports[`PullRequestsQuery #iteratePullRequests Pulling data out with inner resource pagination 4`] = `
Object {
  "query": "
      query (
        $pullRequestNumber: Int!
        $repoName: String!
        $repoOwner: String!
        $maxLimit: Int!
        
        $reviewsCursor: String
        $labelsCursor: String
      ) {
          repository(name: $repoName, owner: $repoOwner) {
            pullRequest(number: $pullRequestNumber) {
              ...
  on PullRequest {
    additions
    author {
      ...on User {
    name
    login
  }
    }
    authorAssociation
    baseRefName
    baseRefOid
    baseRepository {
      name
      url
      owner {
        ...on RepositoryOwner {
    login
    id
    url
  }
      }
    }
    body
    changedFiles
    checksUrl
    closed
    closedAt
    # comments  # Maybe someday
    createdAt
    databaseId
    deletions
    editor {
      ...on User {
    login
    name
    isSiteAdmin
    company
    createdAt
    databaseId
    email
    isEmployee
    location
    updatedAt
    url
    websiteUrl
  }
    }
    # files # Maybe someday
    headRefName
    headRefOid
    headRepository {
      name
      owner {
        ...on RepositoryOwner {
    login
    id
    url
  }
      }
    }
    id
    isDraft
    lastEditedAt
    locked
    mergeCommit {
      ...on Commit {
    id
    oid
    message
    authoredDate
    changedFiles
    commitUrl
    author {
      date
      user {
        login # this used to be ...userFields
      }
    }
  }
    }
    mergeable
    merged
    mergedAt
    mergedBy {
      ...on User {
    name
    login
  }
    }
    number
    permalink
    publishedAt
    reviewDecision
    # reviewRequests  # Maybe someday
    state
    # suggestedReviewers  # Maybe someday
    title
    updatedAt
    url
  }
              
              
    reviews(first: $maxLimit, after: $reviewsCursor) {
      totalCount
      nodes {
        ...on PullRequestReview {
    id
    commit {
      oid
    }
    author {
      ...on User {
          name
          login
        }
    }
    state
    submittedAt
    updatedAt
    url
  }
      }
      pageInfo {
        endCursor
        hasNextPage
      }
    }
              
    labels(first: $maxLimit, after: $labelsCursor) {
      totalCount
      nodes {
        id
        name
      }
      pageInfo {
        endCursor
        hasNextPage
      }
    } 
            }
          }
          ...on Query {
    rateLimit {
      limit
      cost
      remaining
      resetAt
    }
  }
      }",
  "queryVariables": Object {
    "labelsCursor": "Y3Vyc2==",
    "maxLimit": 100,
    "pullRequestNumber": undefined,
    "repoName": "musical-palm-tree",
    "repoOwner": "J1-Test",
    "reviewsCursor": "Y3Vyc29yOnYyOpO0M",
  },
  "rateLimit": Object {
    "cost": 1,
    "limit": 5000,
    "remaining": 4998,
    "resetAt": "2022-03-07T22:04:07Z",
  },
}
`;

exports[`PullRequestsQuery #iteratePullRequests Pulling data out with no inner resource pagination 1`] = `
Object {
  "closed": false,
  "commits": Array [
    Object {
      "id": "MDY6Q29tbWl0MjE6YmVkZDliNDIzNmY3NzNlMTAxNDIwYzVjNzU3OWIyMDNmODVkNmVkNw==",
    },
  ],
  "id": "MDExOlB1bGxSZXF1ZXN0MTA=",
  "labels": Array [
    Object {
      "id": "MDU6TGFiZWwxODE=",
      "name": "bug",
    },
    Object {
      "id": "MDU6TGFiZWwxODI=",
      "name": "documentation",
    },
    Object {
      "id": "MDU6TGFiZWwxODM=",
      "name": "duplicate",
    },
    Object {
      "id": "MDU6TGFiZWwxODU=",
      "name": "good first issue",
    },
  ],
  "reviews": Array [
    Object {
      "id": "MDE3OlB1bGxSZXF1ZXN0UmV2aWV3Mg==",
    },
    Object {
      "id": "MDE3OlB1bGxSZXF1ZXN0UmV2aWV3Mw==",
    },
  ],
  "title": "Update CHANGELOG.md",
}
`;

exports[`PullRequestsQuery #iteratePullRequests Pulling data out with no inner resource pagination 2`] = `
Object {
  "query": "
      query (
        $issueQuery: String!, 
        $maxSearchLimit: Int!,
        $maxLimit: Int!,
        $pullRequestsCursor: String
      ) {
        search(first: $maxSearchLimit, after: $pullRequestsCursor, type: ISSUE, query: $issueQuery) {
          issueCount
          edges {
            node {
              ...on PullRequest {
    additions
    author {
      ...on User {
    name
    login
  }
    }
    authorAssociation
    baseRefName
    baseRefOid
    baseRepository {
      name
      url
      owner {
        ...on RepositoryOwner {
    login
    id
    url
  }
      }
    }
    body
    changedFiles
    checksUrl
    closed
    closedAt
    # comments  # Maybe someday
    createdAt
    databaseId
    deletions
    editor {
      ...on User {
    login
    name
    isSiteAdmin
    company
    createdAt
    databaseId
    email
    isEmployee
    location
    updatedAt
    url
    websiteUrl
  }
    }
    # files # Maybe someday
    headRefName
    headRefOid
    headRepository {
      name
      owner {
        ...on RepositoryOwner {
    login
    id
    url
  }
      }
    }
    id
    isDraft
    lastEditedAt
    locked
    mergeCommit {
      ...on Commit {
    id
    oid
    message
    authoredDate
    changedFiles
    commitUrl
    author {
      date
      user {
        login # this used to be ...userFields
      }
    }
  }
    }
    mergeable
    merged
    mergedAt
    mergedBy {
      ...on User {
    name
    login
  }
    }
    number
    permalink
    publishedAt
    reviewDecision
    # reviewRequests  # Maybe someday
    state
    # suggestedReviewers  # Maybe someday
    title
    updatedAt
    url
  }
              
    ... on PullRequest {
      commits(first: $maxLimit) {
        totalCount
        nodes {
          commit {
            ...on Commit {
    id
    oid
    message
    authoredDate
    changedFiles
    commitUrl
    author {
      date
      user {
        login # this used to be ...userFields
      }
    }
  }
          }
        }
        pageInfo {
          endCursor
          hasNextPage
        }
      }
    }
              
    ... on PullRequest {
      reviews(first: $maxLimit) {
        totalCount
        nodes {
          ...on PullRequestReview {
    id
    commit {
      oid
    }
    author {
      ...on User {
          name
          login
        }
    }
    state
    submittedAt
    updatedAt
    url
  }
        }
        pageInfo {
          endCursor
          hasNextPage
        }
      }
    }
              
  ... on PullRequest {
    labels(first: $maxLimit) {
      totalCount
      nodes {
        id
        name
      }
      pageInfo {
        endCursor
        hasNextPage
      }
    }
  } 
            }
          }
          pageInfo {
            endCursor
            hasNextPage
          }
        }
        ...on Query {
    rateLimit {
      limit
      cost
      remaining
      resetAt
    }
  }
      }",
  "queryVariables": Object {
    "issueQuery": "is:pr repo:J1-Test/happy-sunshine updated:>=2011-10-05T14:48:00.000Z",
    "maxLimit": 100,
    "maxSearchLimit": 25,
  },
}
`;

exports[`PullRequestsQuery #iteratePullRequests Pulling data out with no inner resource pagination 3`] = `
Object {
  "query": "
      query (
        $issueQuery: String!, 
        $maxSearchLimit: Int!,
        $maxLimit: Int!,
        $pullRequestsCursor: String
      ) {
        search(first: $maxSearchLimit, after: $pullRequestsCursor, type: ISSUE, query: $issueQuery) {
          issueCount
          edges {
            node {
              ...on PullRequest {
    additions
    author {
      ...on User {
    name
    login
  }
    }
    authorAssociation
    baseRefName
    baseRefOid
    baseRepository {
      name
      url
      owner {
        ...on RepositoryOwner {
    login
    id
    url
  }
      }
    }
    body
    changedFiles
    checksUrl
    closed
    closedAt
    # comments  # Maybe someday
    createdAt
    databaseId
    deletions
    editor {
      ...on User {
    login
    name
    isSiteAdmin
    company
    createdAt
    databaseId
    email
    isEmployee
    location
    updatedAt
    url
    websiteUrl
  }
    }
    # files # Maybe someday
    headRefName
    headRefOid
    headRepository {
      name
      owner {
        ...on RepositoryOwner {
    login
    id
    url
  }
      }
    }
    id
    isDraft
    lastEditedAt
    locked
    mergeCommit {
      ...on Commit {
    id
    oid
    message
    authoredDate
    changedFiles
    commitUrl
    author {
      date
      user {
        login # this used to be ...userFields
      }
    }
  }
    }
    mergeable
    merged
    mergedAt
    mergedBy {
      ...on User {
    name
    login
  }
    }
    number
    permalink
    publishedAt
    reviewDecision
    # reviewRequests  # Maybe someday
    state
    # suggestedReviewers  # Maybe someday
    title
    updatedAt
    url
  }
              
    ... on PullRequest {
      commits(first: $maxLimit) {
        totalCount
        nodes {
          commit {
            ...on Commit {
    id
    oid
    message
    authoredDate
    changedFiles
    commitUrl
    author {
      date
      user {
        login # this used to be ...userFields
      }
    }
  }
          }
        }
        pageInfo {
          endCursor
          hasNextPage
        }
      }
    }
              
    ... on PullRequest {
      reviews(first: $maxLimit) {
        totalCount
        nodes {
          ...on PullRequestReview {
    id
    commit {
      oid
    }
    author {
      ...on User {
          name
          login
        }
    }
    state
    submittedAt
    updatedAt
    url
  }
        }
        pageInfo {
          endCursor
          hasNextPage
        }
      }
    }
              
  ... on PullRequest {
    labels(first: $maxLimit) {
      totalCount
      nodes {
        id
        name
      }
      pageInfo {
        endCursor
        hasNextPage
      }
    }
  } 
            }
          }
          pageInfo {
            endCursor
            hasNextPage
          }
        }
        ...on Query {
    rateLimit {
      limit
      cost
      remaining
      resetAt
    }
  }
      }",
  "queryVariables": Object {
    "issueQuery": "is:pr repo:J1-Test/happy-sunshine updated:>=2011-10-05T14:48:00.000Z",
    "maxLimit": 100,
    "maxSearchLimit": 25,
    "pullRequestsCursor": "Y3Vyc29yOjI=",
  },
  "rateLimit": Object {
    "cost": 2,
  },
}
`;

exports[`PullRequestsQuery #processResponseData Pulling data out with no inner resource pagination 1`] = `
Object {
  "pullRequests": Object {
    "endCursor": "Y3Vyc29yOjI=",
    "hasNextPage": true,
  },
  "rateLimit": Object {
    "cost": 2,
  },
}
`;

exports[`PullRequestsQuery #processResponseData Pulling data out with no inner resource pagination 2`] = `
Object {
  "closed": false,
  "commits": Array [
    Object {
      "id": "MDY6Q29tbWl0MjE6YmVkZDliNDIzNmY3NzNlMTAxNDIwYzVjNzU3OWIyMDNmODVkNmVkNw==",
    },
  ],
  "id": "MDExOlB1bGxSZXF1ZXN0MTA=",
  "labels": Array [
    Object {
      "id": "MDU6TGFiZWwxODE=",
      "name": "bug",
    },
    Object {
      "id": "MDU6TGFiZWwxODI=",
      "name": "documentation",
    },
    Object {
      "id": "MDU6TGFiZWwxODM=",
      "name": "duplicate",
    },
    Object {
      "id": "MDU6TGFiZWwxODU=",
      "name": "good first issue",
    },
  ],
  "reviews": Array [
    Object {
      "id": "MDE3OlB1bGxSZXF1ZXN0UmV2aWV3Mg==",
    },
    Object {
      "id": "MDE3OlB1bGxSZXF1ZXN0UmV2aWV3Mw==",
    },
  ],
  "title": "Update CHANGELOG.md",
}
`;

exports[`PullRequestsQuery #processResponseData Pulling data out with no inner resource pagination 3`] = `
Object {
  "closed": false,
  "commits": Array [
    Object {
      "id": "MDY6Q29tbWl0MjE6Y2FmNWNjYzA2MjYyMzAxYzFiNjg4NWJkYjc2NzllNTQ0NjVkZmQ5ZA==",
    },
  ],
  "id": "MDExOlB1bGxSZXF1ZXN0OQ==",
  "labels": Array [],
  "reviews": Array [],
  "title": "Create CHANGELOG.md #2",
}
`;

exports[`PullRequestsQuery #processResponseData Skips resources with inner resource pagination 1`] = `
Object {
  "pullRequests": Object {
    "endCursor": "Y3Vyc29yOjI=",
    "hasNextPage": false,
  },
  "rateLimit": Object {
    "cost": 1,
  },
}
`;
